--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -2,20 +2,25 @@
 <resources>
 
     <string name="app_name">JBCS-Client</string>
-    <string name="app_version">2.0</string>
+    <string name="app_version">2.1</string>
     <string name="action_net_client_settings">Net Client Settings</string>
     <string name="action_about">About</string>
 	<string name="yes">Yes</string>
 	<string name="no">No</string>
 	<string name="connect_to">Connect to:</string>
 	
+	
 	<!-- buttons -->
 	<string name="btn_scan">Start Scan</string>
 	<string name="btn_resend">Resend to Server</string>
 	<string name="btn_dismiss">Dismiss</string>
+	<string name="btn_ready">Ready</string>
+	<string name="btn_Cancel">Cancel</string>
 	
 	
 	<!-- Network Client preferences -->
+	<string name = "nc_menu_send_barcode_test_value">Send Test Barcode Value</string>
+	<string name="SID_example">SID:xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</string>
 	<string name="client_netwwork_information">Client network information</string>
 	<string name="server_ip_address">Server IP Address</string>
 	<string name="address">Address</string>
@@ -24,9 +29,15 @@
 	<string name="use_network_client">Use Network Client</string>
 	<string name="save">Save</string>
 	<string name="check_config">Check Config</string>
+	<string name="register_device">Register Device</string>
+	<string name="register_device_dialog_title">Register Your Device</string>
+	<string name="register_device_dialog_message">Press ready when you are ready to send the registration ID.</string>
 	<string name="connection_error_message">Error: The data faild to transmit. Check to make sure your network and client settings are correct, and the server is running.</string>
-	
-	
-	
-	
+	<string name="connection_ok_message">Connection to the server is ok.</string>
+	<string name="device_rejected_message">Your device was rejected by the server.</string>
+	<string name="Device_registered_message">Your device was registered with the server successfully.</string>
+	<string name="registration_request_inactive_message">The registration system is not accepting new devices at this time.</string>
+	<string name="data_received_message">Data received by server.</string>
+	<string name="unregistered_device_message">Your device is not registered with the server.  You must register your device first.</string>
+	<string name="device_already_registered_message">Your device is already registered with the server.</string>
 </resources>
